首页基本完成、

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -2,3 +2,15 @@
   position:absolute;
   clip:rect(0,0,0,0)
 }
+.bg-green{
+  background: #39825A!important;
+}
+.bg-orange{
+  background: #DC3C00!important;
+}
+.bg-red{
+  background: #AE4D50!important;
+}
+.bg-blue{
+  background: #0078D7!important;
+}
