--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -3,14 +3,14 @@
   clip:rect(0,0,0,0)
 }
 .bg-green{
-  background: #39825A!important;
+  background-color: #39825A!important;
 }
 .bg-orange{
-  background: #DC3C00!important;
+  background-color: #DC3C00!important;
 }
 .bg-red{
-  background: #AE4D50!important;
+  background-color: #AE4D50!important;
 }
 .bg-blue{
-  background: #0078D7!important;
+  background-color: #0078D7!important;
 }
