--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -149,7 +149,7 @@
         }
       }
     }
-    .windows{
+    .desktop{
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -157,9 +157,9 @@
       &.edit{
         .modelCtn{
           background: rgba(24,65,134,0.8);
-          .drag{
+          .metro{
             &:hover{
-              .delete{
+              .cancle{
                 display: block!important;
               }
               .changed{
@@ -220,7 +220,7 @@
             vertical-align: middle;
           }
         }
-        .drag{
+        .metro{
           cursor: pointer;
           box-sizing: border-box;
           padding:6px 14px 6px 9px;
@@ -251,7 +251,7 @@
             color:#FFFFFF;
             font-size:18px;
           }
-          .delete{
+          .cancle{
             position: absolute;
             right: 0;
             top: 0;
