--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -153,6 +153,9 @@
         font-weight: bold;
         line-height: 26px;
         padding-top: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .info{
         display: block;
@@ -160,6 +163,9 @@
         font-size: 14px;
         line-height: 24px;
         padding-bottom: 12px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .normal{
         font-size:16px;
