style: 修改和完善样式

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -14,3 +14,58 @@
 .bg-blue{
   background-color: #0078D7!important;
 }
+.icon{
+  display: inline-block;
+  margin-top: 5px;
+  margin-right: 5px;
+  width: 26px;
+  height: 26px;
+}
+.icon-add,.icon-add:hover{
+  cursor: pointer;
+  background: url(~@/assets/image/icon-add.png)
+}
+.icon-remove,.icon-remove:hover{
+  cursor: pointer;
+  background: url(~@/assets/image/icon-remove.png)
+}
+.icon-up,.icon-up:hover{
+  cursor: pointer;
+  background: url(~@/assets/image/icon-up.png)
+}
+.icon-down,.icon-down:hover{
+  cursor: pointer;
+  background: url(~@/assets/image/icon-down.png)
+}
+
+.explanation{
+  display: flex;
+  flex-direction:column;
+  width:100%;
+  margin-bottom: 20px;
+  padding: 10px;
+  background:rgba(246,246,246,1);
+}
+.explanation-title{
+  color: #666666;
+  font-size: 16px;
+}
+.explanation-content{
+  width:450px;
+  height:130px;
+}
+.bg-num{
+  background:url(~@/assets/image/bg-num.png) no-repeat;
+}
+.bg-list{
+  background:url(~@/assets/image/bg-list.png) no-repeat;
+}
+.bg-text{
+  background:url(~@/assets/image/bg-text.png) no-repeat;
+}
+.explanation-fold{
+  margin-left: auto;
+  cursor: pointer;
+  color: #666666;
+  font-size: 16px;
+}
