--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -274,6 +274,11 @@
         border-bottom: 1px solid #EBEBEB;
         overflow-x: hidden;
         overflow-y: auto;
+        .form{
+          width: 78% !important;
+          margin-left:15px;
+          margin-top:15px;
+        }
         .wContent{
           left: 0;
           position: absolute;
