--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -278,6 +278,37 @@
           width: 78% !important;
           margin-left:15px;
           margin-top:15px;
+          .explanation{
+            display: flex;
+            flex-direction:column;
+            width:100%;
+            margin-bottom: 20px;
+            padding: 10px;
+            background:rgba(246,246,246,1);
+            .explanation-title{
+              color: #666666;
+              font-size: 16px;
+            }
+            .explanation-content{
+              width:450px;
+              height:130px;
+            }
+            .bg-num{
+              background:url(~@/assets/image/bg-num.png) no-repeat;
+            }
+            .bg-list{
+              background:url(~@/assets/image/bg-list.png) no-repeat;
+            }
+            .bg-text{
+              background:url(~@/assets/image/bg-text.png) no-repeat;
+            }
+            .explanation-fold{
+              margin-left: auto;
+              cursor: pointer;
+              color: #666666;
+              font-size: 16px;
+            }
+          }
         }
         .wContent{
           left: 0;
