style: 修改弹出框样式

--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -245,11 +245,9 @@
     .main{
       position: absolute;
       right: 0;
-      top: 15%;
-      left:0;
-      width: 60%;
-      max-width: 1000px;
-      min-width: 800px;
+      top: 12%;
+      left: 0;
+      width: 1000px;
       margin: auto;
       background: #ffffff;
       border-radius: 4px;
