--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -367,6 +367,7 @@
                 border-radius:50%;
                 vertical-align: middle;
                 margin-right: 6px;
+                cursor: pointer;
               }
               span{
                 line-height: 100px;
@@ -413,6 +414,7 @@
                   text-align: center;
                   font-size:20px;
                   color: #333;
+                  cursor: pointer;
                 }
                 .circle{
                   position: absolute;
