--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -230,7 +230,7 @@
           position: relative;
           transition: 0.1s linear;
           &:hover{
-            box-shadow:0 0 10px #63BAFF;
+            border: 2px solid #63BAFF;
             transform: scale(1.02);
             z-index: 1;
           }
@@ -591,7 +591,7 @@
             display: none;
             &:hover{
               background: rgba(0,0,0,0.6);
-              color: #fff;
+              color: red;
             }
             span{
               position: absolute;
