style: 文字按钮hover样式调整

--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -179,8 +179,12 @@
       .opration{
         font-size:16px;
         line-height:26px;
-        cursor: pointer;
         padding: 0 10px;
+        &.opration1:hover,&.opration2:hover,&.opration3:hover,
+        &.opration4:hover,&.opration5:hover,&.opration6:hover{
+          font-weight: 600;
+          cursor: pointer !important;
+        }
         &.opration1{
           color:#666666;
         }
