style: 字体颜色调整

--- a/src/assets/css/edit.less
+++ b/src/assets/css/edit.less
@@ -215,7 +215,7 @@
         background: url('../image/nodata.png')
       }
       .nodataText{
-        color: #666666;
+        color: rgba(102, 102, 102, 1);
         font-size: 18px;
         line-height: 26px;
       }
