style：优化较大数字或字段名称的显示效果

--- a/src/assets/css/home.less
+++ b/src/assets/css/home.less
@@ -259,6 +259,9 @@
                   font-size:16px;
                   color:#fff;
                   line-height: 46px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                 }
                 .number{
                   display: block;
@@ -267,6 +270,9 @@
                   color: #fff;
                   text-align: right;
                   line-height: 58px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                   em{
                     font-size: 18px;
                     font-style: normal;
@@ -293,6 +299,9 @@
                   span{
                     font-size: 16px;
                     color:#fff;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                   }
                 }
               }
@@ -370,6 +379,9 @@
                   font-size:18px;
                   color:#fff;
                   line-height: 46px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                 }
                 .number{
                   display: block;
@@ -378,6 +390,9 @@
                   color: #fff;
                   text-align: right;
                   line-height: 58px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                   em{
                     font-size: 18px;
                     font-style: normal;
@@ -404,6 +419,9 @@
                   span{
                     font-size: 16px;
                     color:#fff;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                   }
                 }
               }
@@ -484,6 +502,9 @@
                   font-size:20px;
                   color:#fff;
                   line-height: 50px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                 }
                 .number{
                   display: block;
@@ -492,6 +513,9 @@
                   color: #fff;
                   text-align: right;
                   line-height: 80px;
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
                   em{
                     font-size: 20px;
                     font-style: normal;
@@ -518,6 +542,9 @@
                   span{
                     font-size: 24px;
                     color:#fff;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
                   }
                 }
               }
